# chemical-utils

./: Makefile  README.md  pyproject.toml
.github/workflows/: type-check-package.yml
src/chemical_utils/exceptions/: base.py
src/chemical_utils/exceptions/reactions/: reaction.py
src/chemical_utils/properties/: properties.py  registry.py
src/chemical_utils/reactions/: constants.py  reaction.py
src/chemical_utils/substances/: __init__.py  constants.py  substance.py
src/chemical_utils/tests/: base.py  data.py
src/chemical_utils/tests/api/: test_api.py
src/chemical_utils/tests/reactions/: reaction_utils.py  test_reaction.py
src/chemical_utils/tests/substances/: substance_utils.py  test_substance.py
